--- a/blogpost.html
+++ b/blogpost.html
@@ -1,13 +1,22 @@
 <html>
     <head>
         <title>El ttulo del post</title>
-        <link rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" href="css/
+        estilos.css" />
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
-                <h1>ESte es el titulo atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+                <h1>ESte es el titulo
+                 atractivo e interesante del
+                 post</h1>
+                <p>Y este es el parrafo de
+                inicio donde vamos a explicar
+                las cosas increibles que se
+                 pueden hacer con ramas</p>
             </div>
         </div>
     </body>
